fix: wrap ArticleTextBlockComponent, ArticleImageBlockComponent, ArticleCodeBlockComponent with memo for optimization feat: add block prop to render title and paragraphs in ArticleTextBlockComponent feat: add renderBlock callback for rendering article blocks ArticleDetails

--- a/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
+++ b/src/entities/Article/ui/ArticleDetails/ArticleDetails.module.scss
@@ -28,3 +28,7 @@
   display: flex;
   align-items: center;
 }
+
+.block {
+  margin-top: 16px;
+}
