--- a/src/entities/Article/ui/ArticleTextBlockComponent/ArticleTextBlockComponent.module.scss
+++ b/src/entities/Article/ui/ArticleTextBlockComponent/ArticleTextBlockComponent.module.scss
@@ -1,3 +1,12 @@
 .ArticleCodeBlockComponent {
 
 }
+
+.title {
+  margin-bottom: 16px;
+}
+
+.paragraph {
+  margin-top: 8px;
+}
+
